# BASOS

./: CMakeLists.txt  linker.ld
boot/: boot.s
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg
kernel/: gdt.c  io.h  kernel.c  keyboard.c  keyboard.h  memory.c  memory.h  shell.c  shell.h  string.c  string.h  vga.c  vga.h
